# SG-SLAM-docker

./: .dockerignore  .env  README.md  README_original.md  docker-compose.yml
docker/: Dockerfile  realsense.Dockerfile
scripts/TUN_rgbd_tools/: associate_3.py
src/sg-slam/: CMakeLists.txt  package.xml  run_astra_pro_camera.sh  run_tum.sh  run_tum_walking_xyz.sh
src/sg-slam/configs/: TUM1.yaml  realsense.yaml
src/sg-slam/run_examples/: rgbd_tum.cc  ros_rgbd.cc
